--- a/CmdsMod.csproj
+++ b/CmdsMod.csproj
@@ -15,5 +15,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Projectiles\Hostile\" />
+    <Folder Include="Summons\" />
   </ItemGroup>
 </Project>
